# BioValue-AI

./: .gitignore  CustomFramework.md  LICENSE  Makefile  README.md  TODO.md  conf.yaml  docker-compose.yaml  go.mod  go.sum  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deploy.yaml
cmd/worker/: main.go
config/: config.dev.yaml  config.yaml
deploy/k8s/: configmap.yaml  llm-bridge-deployment.yaml  namespace.yaml  worker-deployment.yaml
deploy/prometheus/: prometheus.yml
docker/: Dockerfile  docker-compose.yml
docs/: api_reference.md
internal/activity/: activities.go  types.go
internal/workflow/: biovalue.go  pipeline_analysis.go  saga.go  valuation.go
llm_bridge/: __init__.py  llm_provider.py  mcp_client.py  rate_limiter.py  server.py
pkg/cache/: redis.go
pkg/config/: config.go
pkg/errors/: classify.go
pkg/llm/: client.go
pkg/logging/: logger.go
pkg/metrics/: prometheus.go
pkg/tracing/: otel.go
proto/: agent_message.proto  llm_bridge.proto
sdk/: __init__.py  client.py  models.py
skills/: clinical_assessor.md  financial_auditor.md  market_strategist.md  pipeline_scout.md  report_generator.md  valuation_actuary.md
src/: __init__.py
src/analysis/: __init__.py  competition.py  integrity.py  opportunity.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  analysis.py  data.py  graph.py  workflow.py
src/config/: __init__.py  settings.py
src/graph/: __init__.py  builder.py  state.py
src/graph/nodes/: __init__.py  analyzer.py  coordinator.py  extractor.py  graph_builder.py  reporter.py
src/ingestion/: __init__.py
src/ingestion/crawler/: __init__.py  web_crawler.py
src/ingestion/parser/: __init__.py  document_parser.py
src/knowledge/: __init__.py  neo4j_client.py
src/knowledge/models/: __init__.py  edges.py  nodes.py
src/knowledge/queries/: __init__.py  templates.py
src/llms/: __init__.py  base.py  factory.py
src/llms/providers/: __init__.py  deepseek_provider.py  (+3 more)
src/utils/: __init__.py  logger.py
tests/: test_knowledge_models.py
